Fix project session mobile version layout

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -203,7 +203,9 @@ textarea{
   }
 
   .projectsContainer{
-    flex-direction: column;
+    flex-direction: row;
+    width:300%;
+    flex-wrap: wrap;
   }
 
 
